dvc pipeline modified

--- a/dvc.yaml
+++ b/dvc.yaml
@@ -5,4 +5,4 @@ stages:
       - src/package/pipeline/stage_01_data_ingestion.py
       - config/config.yaml
     outs:
-      - artifacts/data/ingestion/feature_store/raw.csv
+      - artifacts/data/ingestion
