--- a/dvc.yaml
+++ b/dvc.yaml
@@ -26,4 +26,14 @@ stages:
       - config/config.yaml
     outs:
       - artifacts/data/transformation
+  model_training:
+    cmd: python src\package\pipeline\stage_04_model_trainer.py
+    deps:
+      - src\package\pipeline\stage_04_model_trainer.py
+      - artifacts\data\transformation\train.npy
+      - artifacts\data\transformation\test.npy
+      - artifacts\data\transformation\preprocessor.h5
+      - config/config.yaml
+    outs:
+      - artifacts\model
 
