--- a/dvc.yaml
+++ b/dvc.yaml
@@ -34,6 +34,7 @@ stages:
       - artifacts\data\transformation\test.npy
       - artifacts\data\transformation\preprocessor.h5
       - config/config.yaml
+      - params.json
     outs:
       - artifacts\model
 
