--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
-mlflow
-dagshub
-dvc
-bentoml
-python-dotenv
-python-box
-ipykernel
-pymongo
-scikit-learn
+mlflow==2.20.1
+dagshub==0.5.3
+dvc==3.59.0
+bentoml==1.3.21
+python-dotenv==1.0.1
+python-box==7.3.2
+ipykernel==6.29.5
+pymongo==4.11
+scikit-learn==1.6.1
+# fastapi==0.115.8
+flask==3.1.0
