--- a/.gitignore
+++ b/.gitignore
@@ -170,15 +170,18 @@ cython_debug/
 # PyPI configuration file
 .pypirc
 # Ignores from this projects
+# Folders
+venv/
+__pycache__/
+notebook/
+logs/
+artifacts/
+mlruns/
+test_application/
+# Files
 template.py
-venv
-__pycache__
 .env
-notebook
-logs
-artifacts
 *.egg-info
-mlruns
 bentofile.yaml
 .bentoignore
 service.py
