--- a/.dockerignore
+++ b/.dockerignore
@@ -1,11 +1,10 @@
 template.py
 venv
 __pycache__
-.env
 notebook
 logs
 artifacts
 *.egg-info
-mlruns
 bentofile.yaml
 .bentoignore
+test_application
