--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -92,8 +92,8 @@ jobs:
       - name: Run Docker Image to serve users
         run: |
          docker run -d -p 8080:8000 --ipc="host" --name=networksecurity -e 'AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}' -e 'AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}' -e 'AWS_REGION=${{ secrets.AWS_REGION }}'  ${{secrets.AWS_ECR_LOGIN_URI}}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
-      - name: Clean previous images and containers
+      - name: Clean previous images, containers and volumes
         run: |
-         docker system prune -f
+         docker system prune -af
 
 
